--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "adventure"
 version = "0.1.0"
 description = ""
-authors = [""]
+authors = ["wooferzfg <spapushin@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
